--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,8 @@
         </section>
     </body>
 
-    <script src="./Translator.js"></script>
+    <script type = "text/javascript"
+          src = "{{ url_for('static', filename = 'Translator.js') }}" ></script>
     
     <script>
         var translator = new Translator();
